# cliprecord

./: .gitignore  Cargo.toml  README.md
clips/: convert.py
src/: audio.rs  lawfulvideo.rs  main.rs
