[package]
name = "cliprecord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mki = "0.2.3"
screenshots = "0.5.4"
simplelog = "0.12.1"
wasapi = "0.13.0"
log = "0.4.19"
hound = "3.5.0"
crossbeam = "0.8.0"

